--- a/stylos.css
+++ b/stylos.css
@@ -296,27 +296,99 @@ margin-left: 6px;
     border-bottom: 2px dotted black;
 }
 
-.form{
-    background-color: black;
+.form-contenedor{
+    display: flex;
     width: 100%;
-    height: 23em;
+    height: 20em;
+    flex-direction: column;    
+}
+
+.datos{
     display: flex;
     justify-content: center;
+    width: 100%;
+    height: 40px;
+    padding-bottom: 10px;
+}
+.nombre{
+    width: 25%;
+    padding-right: 10px;   
+}
+.apellido{
+    width: 25%;
+    padding-left: 10px;
+    
+}
+.inombre{
+    width: 100%;
+    border: 1px solid rgb(165, 162, 162);
+    border-radius: 4px;
+    height: 100%;
+    
+}
+.iapellido{
+    border: 1px solid rgb(165, 162, 162);
+    border-radius: 4px;
+    width: 100%;
+    height: 100%;
+    
+}
+.area{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    
+}
+.tarea{
+    border: 1px solid rgb(165, 162, 162);
+    border-radius: 4px;
+    width: 50%;
+}
+.form-parra{
+    width: 67%;
+    display: flex;  
+    justify-content: center;
+    padding-top: 5px;
+
+    
+}
+#parrafo-formulario{
+    color: rgb(131, 126, 126);
+    font-size: small;
    
 }
-
-.row{
-width: 60%;
+.for-bot{
+    justify-content: center;
+    display: flex;
+    height: 40px;
 }
 
-.col{
-height: 50px;
+.botoncito{
+    border-radius: 4px;
+    width: 680px;
+    background-color: rgb(43, 184, 43);
+}
+.site-footer{
+    background-color: rgb(35, 57, 105);
+    width: 100%;
+    height: 90px;
+    
+    display: flex;
+}
+.footer-nav{
+    width: 100%;
+    justify-content: center;
+    display: flex;
+    align-items: center;
+}
+.footer-ul{
+    width: 80%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
-.form-floating{
-   bottom: 95px;
-}
-#la{
-    left: 5px;
-    color: rgb(102, 99, 99);
+.formulario-10{
+height: 260px;
 }
