--- a/stylos.css
+++ b/stylos.css
@@ -129,6 +129,7 @@ main div p{
     left: 0.6em;
     border-radius: 5px;
     font-size: large;
+    
 }
 #conoce{
     margin-top: 2%;
@@ -391,4 +392,153 @@ margin-left: 6px;
 
 .formulario-10{
 height: 260px;
+}
+
+.cajitafeliz{
+    width: 100%;
+    height: 11em;
+    display: flex;
+    justify-content: center;
+   
+   
+}
+
+.descuento1{
+    
+    border: 1px solid rgb(73, 168, 231);
+    width: 15%;
+    height: 70%;
+    align-items: center;
+    position: relative;
+    text-align: center;
+    margin-right: 1%;
+    margin-top: 2%;
+ 
+
+}
+
+.descuento2{
+    margin-top: 2%;
+    border: 1px solid rgb(247, 182, 71);
+    width: 15%;
+    height: 70%;
+    align-items: center;
+    position: relative;
+    text-align: center;
+
+}
+
+
+.des1{
+  width: 100%;
+  color: black;
+  margin-bottom: 1px;
+       
+}
+
+.tv{
+    text-align: center;
+}
+#tv1{
+    margin-bottom: 0px;
+}
+
+#tv2{
+    font-size: xx-large;
+}
+
+.contenedorinput{
+    width: 100%;
+    justify-content: center;
+    display: flex;
+   
+    
+}
+
+.input2{
+    width: 25%;
+    margin-right: 1%;
+    border: 1px solid rgb(160, 209, 241);
+    border-radius: 3px;
+}
+
+#contenedorinputid{
+    margin-top: 1%;
+}
+
+#inputcorreo{
+    margin-right: 1%;
+    width: 51%;
+    border: 1px solid rgb(160, 209, 241);
+    border-radius: 3px;
+}
+
+#labelcant{
+   
+   margin-left: 24%;
+}
+
+#labelcant2{
+    margin-left: 21.5%;
+}
+.contenedorinput4{
+    width: 100%;
+    
+    display: flex;
+}
+
+#cant2{
+    margin-left: -1%;
+}
+
+.pagar{
+    width: 51.5%;
+    text-align: left;
+    background-color: aqua;
+    margin-top: 0.5%;
+    border-radius: 3px;
+    margin-left: -1%;
+
+}
+
+#pag{
+    display: flex;
+    justify-content: center;
+    
+  
+}
+
+#h5f{
+    color: rgb(57, 70, 245);
+    margin-left: 3%;
+    
+}
+
+.botoncitos{
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    margin-top: 1%;
+    height: 2em;
+    margin-bottom: 1%;
+}
+
+#b1{
+    width: 25%;
+    margin-right: 1%;
+    background-color: rgb(86, 245, 86);
+    border-radius: 4px;
+}
+
+#b2{
+    width: 25%;
+    margin-right: 1%;
+    background-color: rgb(86, 245, 86);
+    border-radius: 4px;
+}
+
+#seleccion{
+    border: 1px solid rgb(160, 209, 241);
+    border-radius: 3px;
+    width: 25%;
 }
